--- a/spring_cloud_config_client_8097/pom.xml
+++ b/spring_cloud_config_client_8097/pom.xml
@@ -9,18 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring_cloud_config_8095</artifactId>
+    <artifactId>spring_cloud_config_client_8097</artifactId>
 
     <dependencies>
-        <!--        消息总线-->
+        <!--        配置客户端依赖-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
         </dependency>
-<!--        配置中心-->
+        <!--        配置客户端依赖-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
+            <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
         <!--eureka-client-->
         <dependency>
